[package]
name = "password-hash"
description = """
Traits which describe the functionality of password hashing algorithms,
as well as a `no_std`-friendly implementation of the PHC string format
(a well-defined subset of the Modular Crypt Format a.k.a. MCF)
"""
version = "0.1.1"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/password-hash"
repository = "https://github.com/RustCrypto/traits/tree/master/password-hash"
categories = ["cryptography", "no-std"]
keywords = ["crypt", "mcf", "password", "pbkdf", "phc"]

[dependencies]
base64ct = { git = "https://github.com/fortelabsinc/utils", rev="98ce8e6676f547fc67f66b5d17f584b13580519e" }
rand_core = { version = "0.6", optional = true, default-features = false }

[features]
alloc = ["base64ct/alloc"]
std = ["alloc", "base64ct/std"]
